<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TransActivity">

    <EditText
        android:id="@+id/trans_input"
        android:layout_width="367dp"
        android:layout_height="76dp"
        android:hint="@string/hint_tran"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087"
        android:enabled="true"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:minLines="8"
        android:maxLines="10"
         android:scrollbars="vertical"
         android:background="@android:drawable/edit_text"
    />

    <Button
        android:id="@+id/tran_btn_tran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tran_btnLabel_tran"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trans_input"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/trans_output"
        android:layout_width="385dp"
        android:layout_height="159dp"
        android:text="@string/tran_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tran_btn_tran"
        app:layout_constraintVertical_bias="0.258" />

    <Button
        android:id="@+id/tran_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tran_btnLabel_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trans_output"
        app:layout_constraintVertical_bias="0.668" />

</androidx.constraintlayout.widget.ConstraintLayout>